Increase width slightly to fix weird break on desktop browsers.

--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -70,7 +70,7 @@
     text-shadow: 0px 0px 1px rgba(0,0,0,0.5);
 
     #header-content {
-      width: 60%;
+      width: 65%;
       margin-top: 10vh;
       margin-left: auto;
       margin-right: auto;
